unpackaged/main/default/objects/Opportunity/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <formula>Account.BillingStreet &amp; BR() &amp;   Account.BillingCity &amp; &quot;, &quot; &amp;   Account.BillingState &amp; &quot; &quot;  &amp;  Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address</label>
    <type>Text</type>
</CustomField>