unpackaged/main/default/objects/Opportunity/fields/Account_Franchises__c.field-meta.xml
<CustomField>
    <fullName>Account_Franchises__c</fullName>
    <label>Account Franchises</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>