unpackaged/main/default/objects/Opportunity/fields/Account_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_18__c</fullName>
    <formula>Account.Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id (18)</label>
    <type>Text</type>
</CustomField>