unpackaged/main/default/objects/Opportunity/fields/Account_Id_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_del__c</fullName>
    <formula>CASESAFEID( Account.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>