unpackaged/main/default/objects/Opportunity/fields/Account_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent_ID__c</fullName>
    <formula>CASESAFEID( Account.ParentId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Parent ID</label>
    <type>Text</type>
</CustomField>