unpackaged/main/default/objects/Opportunity/fields/Account_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_1__c</fullName>
    <label>Account Phone 1</label>
    <type>Phone</type>
</CustomField>