unpackaged/main/default/objects/Opportunity/fields/Account_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_2__c</fullName>
    <label>Account Phone 2</label>
    <type>Phone</type>
</CustomField>