unpackaged/main/default/objects/Opportunity/fields/Account_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Address__c</fullName>
    <formula>Account.ShippingStreet &amp; BR() &amp;   Account.ShippingCity &amp; &quot;, &quot; &amp;   Account.ShippingState &amp; &quot; &quot;  &amp;  Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping Address</label>
    <type>Text</type>
</CustomField>