unpackaged/main/default/objects/Opportunity/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>When the Opportunity Stage is updated to ‘Closed Won’, this field is updated with the value from the ‘Client Status’ field on the Account.</description>
    <inlineHelpText>When the Opportunity Stage is updated to ‘Closed Won’, this field is updated with the value from the ‘Client Status’ field on the Account.</inlineHelpText>
    <label>Account Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>