unpackaged/main/default/objects/Opportunity/fields/Administrative_Contact__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrative Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Attendee Contact)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>