unpackaged/main/default/objects/Opportunity/fields/Administrative_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Contact_ID__c</fullName>
    <formula>Administrative_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Administrative Contact ID</label>
    <type>Text</type>
</CustomField>