unpackaged/main/default/objects/Opportunity/fields/Also__c.field-meta.xml
<CustomField>
    <fullName>Also__c</fullName>
    <label>Also #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>