unpackaged/main/default/objects/Opportunity/fields/Amount_Lost__c.field-meta.xml
<CustomField>
    <fullName>Amount_Lost__c</fullName>
    <formula>IF(  TEXT(StageName)  = &quot;Closed Lost&quot;,  Amount * (-1),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Lost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>