unpackaged/main/default/objects/Opportunity/fields/Amount_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Quoted__c</fullName>
    <description>What was the amount this Dealer was quoted?</description>
    <label>Amount Quoted Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>