unpackaged/main/default/objects/Opportunity/fields/Amount_Quoted_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>Amount_Quoted_Set_Up__c</fullName>
    <label>Amount Quoted Set-Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>