unpackaged/main/default/objects/Opportunity/fields/Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Amount_Won__c</fullName>
    <formula>IF( TEXT(StageName) = &quot;Closed Won&quot;, Amount,
IF( TEXT(StageName) = &quot;Contract Received&quot;, Amount,
IF( TEXT(StageName) = &quot;Waiting on Expenses&quot;, Amount,
IF( TEXT(StageName) = &quot;Closed - All dealerships on axcessa&quot;, Amount,
IF( TEXT(StageName) = &quot;Executive Committee Approved&quot;, Amount,
IF( TEXT(StageName) = &quot;Enrolled&quot;, Amount,







0))))))</formula>
    <label>Amount Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>