unpackaged/main/default/objects/Opportunity/fields/Annan_Representative__c.field-meta.xml
<CustomField>
    <fullName>Annan_Representative__c</fullName>
    <label>Annan Representative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clay Yantzi</fullName>
            </value>
            <value>
                <fullName>Collin Morris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>