unpackaged/main/default/objects/Opportunity/fields/Annualized_Revenue_Marketing_ROI__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue_Marketing_ROI__c</fullName>
    <label>Annualized Revenue - Marketing ROI</label>
    <summarizedField>OpportunityLineItem.Annualized_Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>