unpackaged/main/default/objects/Opportunity/fields/Annualized_Revenue_Won__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue_Won__c</fullName>
    <formula>if( Amount_Won__c &gt; 0,  Annualized_Revenue_Marketing_ROI__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Revenue - Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>