unpackaged/main/default/objects/Opportunity/fields/Application_Sent__c.field-meta.xml
<CustomField>
    <fullName>Application_Sent__c</fullName>
    <label>Application Sent</label>
    <type>Date</type>
</CustomField>