unpackaged/main/default/objects/Opportunity/fields/Attendee_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Contact_ID__c</fullName>
    <formula>Administrative_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Contact ID</label>
    <type>Text</type>
</CustomField>