unpackaged/main/default/objects/Opportunity/fields/Average_Meeting_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Meeting_Days__c</fullName>
    <label>Average Meeting Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>