unpackaged/main/default/objects/Opportunity/fields/axcessa_Group__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>axcessa Group</label>
    <referenceTo>axcessa_Group__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>