unpackaged/main/default/objects/Opportunity/fields/axcessa_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Group_Number__c</fullName>
    <label>axcessa Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>