unpackaged/main/default/objects/Opportunity/fields/axcessa_Program_Record_History__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Program_Record_History__c</fullName>
    <label>axcessa Program Record History</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>