unpackaged/main/default/objects/Opportunity/fields/axcessa_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Training_Completed__c</fullName>
    <label>axcessa Training Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>