unpackaged/main/default/objects/Opportunity/fields/Backfill_Number__c.field-meta.xml
<CustomField>
    <fullName>Backfill_Number__c</fullName>
    <label>Backfill Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>X20_Group_New_or_Backfill__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1-14</fullName>
            </value>
            <value>
                <fullName>15-19</fullName>
            </value>
            <value>
                <fullName>20+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>