unpackaged/main/default/objects/Opportunity/fields/Billing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_End_Date__c</fullName>
    <label>Billing End Date</label>
    <type>Date</type>
</CustomField>