unpackaged/main/default/objects/Opportunity/fields/Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information__c</fullName>
    <label>Billing Information</label>
    <type>TextArea</type>
</CustomField>