unpackaged/main/default/objects/Opportunity/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
                <default>true</default>
                <label>Paper</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>