unpackaged/main/default/objects/Opportunity/fields/Billing_Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Pricing_Notes__c</fullName>
    <label>Billing/Pricing Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>