unpackaged/main/default/objects/Opportunity/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <description>This field is used by Accounting to put opportunities on hold or in certain billing status to optimize the billing process.</description>
    <inlineHelpText>Use this field to delineate billing status</inlineHelpText>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>