unpackaged/main/default/objects/Opportunity/fields/Billing_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Submitted_Date__c</fullName>
    <description>Date billing has been submitted to accounting</description>
    <inlineHelpText>Date billing has been submitted to accounting</inlineHelpText>
    <label>Billing Submitted Date</label>
    <type>Date</type>
</CustomField>