unpackaged/main/default/objects/Opportunity/fields/Bundle_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Not Applicable</label>
    <type>Checkbox</type>
</CustomField>