unpackaged/main/default/objects/Opportunity/fields/ByPassValidation__c.field-meta.xml
<CustomField>
    <fullName>ByPassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be set in a flow to bypass any validation rule it&#39;s used in. Initially created as part of the NCMi Paid Seats project.</description>
    <label>ByPassValidation</label>
    <type>Checkbox</type>
</CustomField>