unpackaged/main/default/objects/Opportunity/fields/CAD_Run__c.field-meta.xml
<CustomField>
    <fullName>CAD_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAD Run</label>
    <type>Checkbox</type>
</CustomField>