unpackaged/main/default/objects/Opportunity/fields/CIP_Added__c.field-meta.xml
<CustomField>
    <fullName>CIP_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIP Added</label>
    <type>Checkbox</type>
</CustomField>