unpackaged/main/default/objects/Opportunity/fields/Clicked_Exit_Link__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Exit_Link__c</fullName>
    <label>Clicked Exit Link</label>
    <type>Date</type>
</CustomField>