unpackaged/main/default/objects/Opportunity/fields/Client_Declined_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Client_Declined_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Declined Bundle</label>
    <type>Checkbox</type>
</CustomField>