unpackaged/main/default/objects/Opportunity/fields/Client_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Client_First_Response__c</fullName>
    <label>Client First Response</label>
    <type>Date</type>
</CustomField>