unpackaged/main/default/objects/Opportunity/fields/Client_Response__c.field-meta.xml
<CustomField>
    <fullName>Client_Response__c</fullName>
    <formula>IF( ISBLANK(Client_First_Response__c) , &quot;N&quot;, &quot;Y&quot;)</formula>
    <label>Client Response</label>
    <type>Text</type>
</CustomField>