unpackaged/main/default/objects/Opportunity/fields/Co_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Applicant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Co-Applicant)</relationshipLabel>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>