unpackaged/main/default/objects/Opportunity/fields/Collecting_Data__c.field-meta.xml
<CustomField>
    <fullName>Collecting_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collecting Data (Code)</label>
    <type>Checkbox</type>
</CustomField>