unpackaged/main/default/objects/Opportunity/fields/Collecting_Data_Text__c.field-meta.xml
<CustomField>
    <fullName>Collecting_Data_Text__c</fullName>
    <formula>IF(Collecting_Data__c,&quot;&quot;,&quot;The first thing we need in order to enroll you in this program is 14 months’ worth of financial data for your dealership. To assist with this request, our Financial Statement Submission Guide is attached. Once we have this information, we will produce an NCM Benchmark® composite. Please reach out to your coordinator with any questions you may have.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collecting Data Text (Code)</label>
    <type>Text</type>
</CustomField>