unpackaged/main/default/objects/Opportunity/fields/Commission_Received__c.field-meta.xml
<CustomField>
    <fullName>Commission_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Received</label>
    <type>Checkbox</type>
</CustomField>