unpackaged/main/default/objects/Opportunity/fields/Composite_Mailed_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Composite_Mailed_Spiff__c</fullName>
    <description>Used for Composite/Benchmark Product Spiffs</description>
    <label>Composite Mailed Spiff</label>
    <type>Date</type>
</CustomField>