unpackaged/main/default/objects/Opportunity/fields/Conference_Call_Email__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_Email__c</fullName>
    <description>Date email has been sent to CEO assistant, to set date for conference call between moderator, consultant and CEO</description>
    <inlineHelpText>Date email has been sent to CEO assistant, to set date for conference call between moderator, consultant and CEO</inlineHelpText>
    <label>Conference Call Email</label>
    <type>Date</type>
</CustomField>