unpackaged/main/default/objects/Opportunity/fields/Conference_Call_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Conference_Call_Occurred__c</fullName>
    <description>Date the conference call between moderator, consultant and CEO has taken place</description>
    <inlineHelpText>Date the conference call between moderator, consultant and CEO has taken place</inlineHelpText>
    <label>Conference Call Occurred</label>
    <type>Date</type>
</CustomField>