unpackaged/main/default/objects/Opportunity/fields/Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Sent__c</fullName>
    <description>Manager Form and NCMi Enrollment Emailed</description>
    <inlineHelpText>Manager Form and NCMi Enrollment Emailed</inlineHelpText>
    <label>Confirmation Sent</label>
    <type>Date</type>
</CustomField>