unpackaged/main/default/objects/Opportunity/fields/Consolidated_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the opportunity this record has been consolidated to for purposes of billing.</description>
    <inlineHelpText>This is the opportunity this record has been consolidated to for purposes of billing.</inlineHelpText>
    <label>Consolidated Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>