unpackaged/main/default/objects/Opportunity/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>Consultant - deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dennis Gregg</fullName>
            </value>
            <value>
                <fullName>Don Rothrauff</fullName>
            </value>
            <value>
                <fullName>Garry House</fullName>
            </value>
            <value>
                <fullName>John Gilbert</fullName>
            </value>
            <value>
                <fullName>Kevin Cunningham</fullName>
            </value>
            <value>
                <fullName>Kevin Herndon</fullName>
            </value>
            <value>
                <fullName>Lee Michaelson</fullName>
            </value>
            <value>
                <fullName>Mark Shackelford</fullName>
            </value>
            <value>
                <fullName>Paul Stowe</fullName>
            </value>
            <value>
                <fullName>Retail Operations</fullName>
            </value>
            <value>
                <fullName>Rich Ackman</fullName>
            </value>
            <value>
                <fullName>Ron Caruso</fullName>
            </value>
            <value>
                <fullName>Terry Wichmann</fullName>
            </value>
            <value>
                <fullName>Tony Albertson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>