unpackaged/main/default/objects/Opportunity/fields/Contract_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date_Sent__c</fullName>
    <description>What date was the contract sent to the signer?</description>
    <label>Contract Date Sent</label>
    <type>Date</type>
</CustomField>