unpackaged/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term Months</label>
    <length>80</length>
    <type>Text</type>
</CustomField>