unpackaged/main/default/objects/Opportunity/fields/Converted_to_Regular_Client__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Regular_Client__c</fullName>
    <label>Converted to Regular Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>