unpackaged/main/default/objects/Opportunity/fields/Coordinator_Formula__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Formula__c</fullName>
    <formula>Group_Id__r.Coordinator__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator Formula</label>
    <type>Text</type>
</CustomField>