unpackaged/main/default/objects/Opportunity/fields/Count_Billing_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Count_Billing_Submitted_Date__c</fullName>
    <formula>IF(ISNULL(Billing_Submitted_Date__c ), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Billing Submitted Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>