unpackaged/main/default/objects/Opportunity/fields/Count_Conf_Call_Email__c.field-meta.xml
<CustomField>
    <fullName>Count_Conf_Call_Email__c</fullName>
    <formula>IF (ISNULL( Conference_Call_Email__c) ,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Conf Call Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>