unpackaged/main/default/objects/Opportunity/fields/Count_Enrollment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Count_Enrollment_Sent__c</fullName>
    <formula>IF( ISNULL(Enrollment_Sent__c),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Enrollment Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>