unpackaged/main/default/objects/Opportunity/fields/Count_First_PCM_Mtg__c.field-meta.xml
<CustomField>
    <fullName>Count_First_PCM_Mtg__c</fullName>
    <formula>IF(ISNULL(First_PCM_Mtg__c ),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count First PCM Mtg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>