unpackaged/main/default/objects/Opportunity/fields/Course_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Date__c</fullName>
    <label>Course Date</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCMi_Course__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>March 2, 2015</fullName>
            </value>
            <value>
                <fullName>August 3, 2015</fullName>
            </value>
            <value>
                <fullName>April 1-3, 2015</fullName>
            </value>
            <value>
                <fullName>April 13-15, 2015</fullName>
            </value>
            <value>
                <fullName>April 15-17, 2015</fullName>
            </value>
            <value>
                <fullName>April 20-22, 2015</fullName>
            </value>
            <value>
                <fullName>April 22-24, 2015</fullName>
            </value>
            <value>
                <fullName>April 27-28, 2015</fullName>
            </value>
            <value>
                <fullName>April 29-30, 2015</fullName>
            </value>
            <value>
                <fullName>August 10-12, 2015</fullName>
            </value>
            <value>
                <fullName>August 11-12, 2015</fullName>
            </value>
            <value>
                <fullName>August 12-14, 2015</fullName>
            </value>
            <value>
                <fullName>August 17-19, 2015</fullName>
            </value>
            <value>
                <fullName>August 18-19, 2015</fullName>
            </value>
            <value>
                <fullName>August 19-21, 2015</fullName>
            </value>
            <value>
                <fullName>August 24-26, 2015</fullName>
            </value>
            <value>
                <fullName>August 26-28, 2015</fullName>
            </value>
            <value>
                <fullName>August 4-7, 2015</fullName>
            </value>
            <value>
                <fullName>December 10-11, 2015</fullName>
            </value>
            <value>
                <fullName>December 14-16, 2015</fullName>
            </value>
            <value>
                <fullName>December 16-18, 2015</fullName>
            </value>
            <value>
                <fullName>December 8-9, 2015</fullName>
            </value>
            <value>
                <fullName>February 16-17, 2015</fullName>
            </value>
            <value>
                <fullName>February 17-18, 2015</fullName>
            </value>
            <value>
                <fullName>February 17-20, 2015</fullName>
            </value>
            <value>
                <fullName>February 19-20, 2015</fullName>
            </value>
            <value>
                <fullName>February 23-25, 2015</fullName>
            </value>
            <value>
                <fullName>February 25-27, 2015</fullName>
            </value>
            <value>
                <fullName>February 9-11, 2015</fullName>
            </value>
            <value>
                <fullName>February 9-13, 2015</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>