unpackaged/main/default/objects/Opportunity/fields/Course_Old__c.field-meta.xml
<CustomField>
    <fullName>Course_Old__c</fullName>
    <label>Course</label>
    <type>TextArea</type>
</CustomField>