unpackaged/main/default/objects/Opportunity/fields/CRC_Sales_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>CRC_Sales_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRC Sales Notification Sent</label>
    <type>Checkbox</type>
</CustomField>